_source/_sass/_layout.scss
/*
    Basic Styling
*/
html {
  font-size: 62.5%;
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

.wrapper {
  @extend %container;
}

/*
    Site Header
*/
.masthead {
  background-color: $color-background;
  padding-top: $spacing-unit;
  padding-bottom: $spacing-unit;
  box-shadow: inset 0 -.2rem 0.5rem rgba($color-details, 0.4);

  @include on-palm {
    text-align: center;
  }

  @extend %clearfix;

  .site-title {
    line-height: 0;
    display: inline-block;

    svg {
      height: 3.2rem;
      max-width: 11.5rem;
      fill: $color-accent;
    }
  }

  .main-menu {
    float: right;
    font-size: $font-size-small;
    line-height: 3.2rem;

    a {
      &:not(:last-child) {
        margin-right: $spacing-unit;
      }
    }

    @include on-palm {
      float: none;
      display: flex;
      flex-flow: row nowrap;
      overflow-x: auto;
      margin-left: -$spacing-unit / 2;
      margin-right: -$spacing-unit / 2;
      padding-left: $spacing-unit / 2;
      padding-right: $spacing-unit / 2;
      -webkit-overflow-scrolling: touch;
      -ms-overflow-style: -ms-autohiding-scrollbar;

      a {
        flex: 0 0 auto;
      }
    }
  }
}


/*
    Content
*/
.page {
  padding-top: $spacing-unit;
  background-image: url("images/bg.jpg");
  background-repeat: no-repeat;
  background-size: contain;
  background-position: top center;
  z-index: 0;
  padding-bottom: $spacing-unit;

  .page-title {
    font-weight: 300;
    text-align: center;
    margin-bottom: $spacing-unit;
  }

  .page-content {
    max-width: $content-width;
    margin-left: auto;
    margin-right: auto;
  }
}

.home {

  .banner {
    margin-bottom: $spacing-unit * 2;

    h1 {
      font-size: $font-size-base * 2;
      font-weight: 300;
      text-align: center;
      margin-bottom: $spacing-unit * 2;

      @include on-palm {
        font-size: $font-size-base * 2;
      }
    }

    .featured {
      @extend %featured-links;
    }
  }

  .blog {
    .posts-list {
      list-style: none;
      margin-left: 0;

      li {
        margin-top: $spacing-unit / 2;
        margin-bottom: $spacing-unit / 2;

        h2 {
          font-weight: 700;
          font-family: $font-family-main;
          font-size: $font-size-base;
          line-height: 1.2;
          margin-bottom: 0;
        }

        span {
          font-size: $font-size-small;
          line-height: 1;

          a {
            color: $color-text;
          }
        }
      }
    }

    .rss-link,
    .archives-link {
      @extend %button;
    }

    .blog-menu {
      box-shadow: inset 0 .3rem .3rem -.3rem rgba($color-details, .7);
      margin-top: $spacing-unit;
      padding-top: $spacing-unit;
      text-align: center;
      margin-bottom: $spacing-unit;

      .rss-link {
        background: linear-gradient(to bottom, #e4902c, darken(#e4902c, 5%));

        &:hover,
        &:focus {
          background: linear-gradient(to bottom, lighten(#e4902c, 5%), #e4902c);
        }
      }
    }
  }
}

.directory {
  h1 {
    font-size: $font-size-base * 2;
    font-weight: 300;
    text-align: center;
    margin-bottom: $spacing-unit * 2;

    strong {
      font-weight: 400;
    }
  }
}

// The Blog
.blog-container {
  @extend %clearfix;

  h1 {
    font-size: $font-size-base * 1.5;
  }

  .blog {
    display: inline-block;
    max-width: $content-width;
    margin-bottom: $spacing-unit;

    .blog-navigation {
      text-align: center;
      margin-bottom: $spacing-unit;

      .nav-link {
        @extend %button;
      }

      span.nav-link,
      span.nav-link:hover,
      span.nav-link:focus {
        background: $color-background;
        color: darken($color-background, 20%);
        cursor: not-allowed;

        svg {
          fill: darken($color-background, 20%);
        }
      }
    }
  }

  .sidebar {
    float: right;
    width: 100%;
    max-width: 30rem;
    margin-bottom: $spacing-unit;
    font-size: 75%;

    .widget {
      box-shadow: 0 0 .25rem rgba($color-details, 0.6);
      border-radius: .3rem;
      background: $color-background;
      padding: $spacing-unit / 4 $spacing-unit / 2;
      margin-bottom: $spacing-unit;

      h1 {
        font-size: $font-size-small;
        font-weight: 700;
        text-transform: uppercase;
        letter-spacing: 0.1em;
      }

      ul {
        list-style: none;
        padding-left: 0;
      }
    }

    .social {
      text-align: center;
      margin-bottom: $spacing-unit;
      .youtube-link,
      .youtube-link:active {
        @extend %button;
        background: linear-gradient(to bottom, #fc575e, darken(#fc575e, 20%));

        &:hover,
        &:focus {
          background: linear-gradient(to bottom, lighten(#fc575e, 10%), #fc575e);
        }
      }

      .sporecast-link {
        @extend %button;
      }
    }

    #stats {
      background: none;
      border: none;
      box-shadow: none;

      .stats {
        width: 100%;
        text-align: center;
        border: .1rem solid $color-background;
        border-radius: .3rem;

        th, td {
          padding: $spacing-unit / 4 0;
        }

        th {
          font-weight: 700;
          letter-spacing: 0.1em;
          text-transform: lowercase;
          font-size: 90%;
          background: $color-background;
        }

        td {
          font-size: calc(#{$font-size-base} * 1.5);
        }

        tfoot {
          th {
            background: none;
          }
        }
      }
    }

    @include on-palm {
      float: none;
      max-width: 100%;
    }

    img {
      max-width: 100%;
    }
  }
}

// The Post
.post {
  margin-bottom: $spacing-unit * 2;

  &:not(:last-child) {
    padding-bottom: $spacing-unit * 2;
    box-shadow: inset 0 -.3rem .3rem -.3rem rgba($color-details, .7);
  }

  .post-header {
    margin-bottom: $spacing-unit;

    h1 {
      font-size: $font-size-base * 2.25;
      line-height: 1.2;
    }
  }

  .post-meta {
    font-size: $font-size-small;

    .post-date,
    .post-permalink {
      margin-right: $spacing-unit / 2;
    }

    svg {
      height: $font-size-small;
      width: $font-size-small;
      fill: $color-details;
      vertical-align: -.2rem;
    }
  }

  .post-footer {
    margin-top: $spacing-unit;
  }
}

/*
    Site Footer
*/
.colophon {
  background-color: $color-background;
  padding-top: $spacing-unit;
  padding-bottom: $spacing-unit;
  box-shadow: inset 0 .2rem 0.5rem rgba($color-details, 0.4);

  .relative-links {
    display: flex;
    flex-flow: row wrap;
    font-size: $font-size-small;
    font-weight: 700;
    text-transform: uppercase;
    margin-bottom: $spacing-unit;

    a:not(:last-child) {
      margin-right: $spacing-unit;
    }

    .meta-links {
      flex: 0 0 auto;
      margin-right: auto;
    }

    @include on-palm {
      display: block;
      text-align: center;

      .meta-links {
        margin-bottom: $spacing-unit / 2;
      }
    }
  }

  .terms {
    max-width: $palm-width;
    margin: 0 auto $spacing-unit;
    font-size: $font-size-small;
    text-align: center;
  }
}

